--- a/user-authentication/user-create-acc.html
+++ b/user-authentication/user-create-acc.html
@@ -2,30 +2,28 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <title>Create Account</title>
-    <link rel="stylesheet" href="user-create-acc.css" />
+  <meta charset="UTF-8" />
+  <title>Create Account</title>
+  <link rel="stylesheet" href="user-create-acc.css" />
 </head>
 
 <body>
-    <div class="wrap">
-        <h2>Create Account</h2>
-        <form id="signupForm">
-            <input type="email" id="email" placeholder="Email" required />
-            <input type="password" id="password" placeholder="Password (min 6 chars)" required />
-            <button type="submit">Sign Up</button>
-        </form>
-        <p>Already have an account? <a href="user-login.html">Login</a></p>
-        <p id="msg" class="msg"></p>
-    </div>
-
-
-    <!-- Page logic -->
+  <div class="wrap">
+    <h2>Create Account</h2>
+    <form id="signupForm"> <input type="email" id="email" placeholder="Email" required /> <input type="password"
+        id="password" placeholder="Password (min 6 chars)" required /> <button type="submit">Sign Up</button> </form>
+    <p>Already have an account? <a href="user-login.html">Login</a></p>
+    <p id="msg" class="msg"></p>
+  </div> <!-- Page logic -->
+  <!-- Page logic -->
 <script type="module">
   // Firebase v9 modular imports
   import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js";
-  import { getAuth, createUserWithEmailAndPassword, onAuthStateChanged } 
-    from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
+  import {
+    getAuth,
+    createUserWithEmailAndPassword,
+    onAuthStateChanged
+  } from "https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js";
 
   // Firebase config
   const firebaseConfig = {
@@ -47,23 +45,26 @@
     if (user) window.location.href = "index.html";
   });
 
-  const form = document.getElementById('signupForm');
-  const msg = document.getElementById('msg');
+  const form = document.getElementById("signupForm");
+  const msg = document.getElementById("msg");
 
-  form.addEventListener('submit', async (e) => {
+  form.addEventListener("submit", async (e) => {
     e.preventDefault();
-    msg.textContent = '';
-    const email = document.getElementById('email').value.trim();
-    const password = document.getElementById('password').value;
+    msg.textContent = "";
+
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value;
 
     try {
       await createUserWithEmailAndPassword(auth, email, password);
+
       msg.textContent = "Account created ✅ Redirecting…";
-      msg.style.color = 'green';
+      msg.style.color = "green";
+
       setTimeout(() => (window.location.href = "index.html"), 800);
     } catch (err) {
       msg.textContent = err.message;
-      msg.style.color = 'crimson';
+      msg.style.color = "crimson";
     }
   });
 </script>
