--- a/admin-authentication/daashboard-setting.html
+++ b/admin-authentication/daashboard-setting.html
@@ -6,8 +6,7 @@
   <title>Erumunai Organic Farm — Settings</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Font Awesome -->
-  <link rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
   <style>
     :root {
@@ -29,14 +28,18 @@
 
     body {
       font-family: "Segoe UI", sans-serif;
-      background: var(--bg);
       color: var(--text);
+      background: var(--bg);
       display: flex;
       height: 100vh;
       overflow: hidden;
     }
 
-    /* Sidebar */
+    a {
+      text-decoration: none;
+      color: inherit;
+    }
+
     .sidebar {
       width: 250px;
       background: var(--primary);
@@ -65,13 +68,11 @@
       display: block;
       padding: 0.75rem 1rem;
       border-radius: var(--radius);
-      transition: background var(--transition);
     }
 
     .nav a:hover,
     .nav a.active {
       background: var(--accent);
-      color: var(--text);
     }
 
     /* Main */
@@ -245,7 +246,7 @@
 
     <div class="content">
       <!-- Banner Management -->
-      <div class="section-title">Homepage Banners</div>
+      <!-- <div class="section-title">Homepage Banners</div>
       <form id="bannerForm">
         <label>Number of Banners</label>
         <input type="number" id="bannerCount" min="1" max="10" />
@@ -256,7 +257,7 @@
         <button type="submit" class="save-btn">Add / Update Banner</button>
       </form>
 
-      <div class="banner-list" id="bannerList"></div>
+      <div class="banner-list" id="bannerList"></div> -->
 
       <!-- Notifications -->
       <div class="section-title">Order Notifications</div>
@@ -271,76 +272,43 @@
       </form>
     </div>
 
-    <footer>
+    <!-- <footer>
       <a href="https://wa.me/919840752833" target="_blank"><i class="fab fa-whatsapp"></i></a>
       <a href="https://instagram.com/ermunaifarm" target="_blank"><i class="fab fa-instagram"></i></a>
       <span><i class="fas fa-envelope"></i> info@ermunai.com</span>
       <span><i class="fas fa-phone"></i> +91 98407 52833</span>
-    </footer>
+    </footer> -->
   </div>
 
   <!-- Firebase + Logic -->
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-    import { getFirestore, collection, addDoc, getDocs, deleteDoc, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
+    import { getFirestore, doc, setDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
 
     // Firebase Config
     const firebaseConfig = {
-      apiKey: "YOUR_KEY",
-      authDomain: "YOUR_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_BUCKET",
-      messagingSenderId: "YOUR_MSG_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyCbfdG2XU302FuZx0MapVTRmb3Qtaa-hA8",
+      authDomain: "ermunai-e-commerce-project.firebaseapp.com",
+      projectId: "ermunai-e-commerce-project",
+      storageBucket: "ermunai-e-commerce-project.appspot.com",
+      messagingSenderId: "365240050790",
+      appId: "1:365240050790:web:2d4867d6ab4f93a661f9a7"
     };
 
     const app = initializeApp(firebaseConfig);
     const db = getFirestore(app);
-    const storage = getStorage(app);
 
-    const bannerRef = collection(db, "banners");
+    // ✅ Load saved settings when page opens
+  async function loadSettings() {
+    const ref = doc(db, "settings", "notifications"); // path to doc
+    const snapshot = await getDoc(ref); // fetch doc data
 
-    // Add Banner
-    document.getElementById("bannerForm").onsubmit = async (e) => {
-      e.preventDefault();
-      const file = document.getElementById("bannerImageFile").files[0];
-      const count = parseInt(document.getElementById("bannerCount").value);
-      let imageUrl = "";
-
-      if (file) {
-        const storageRef = ref(storage, "banners/" + Date.now() + "-" + file.name);
-        await uploadBytes(storageRef, file);
-        imageUrl = await getDownloadURL(storageRef);
-        await addDoc(bannerRef, { image: imageUrl, createdAt: Date.now() });
-      }
-
-      localStorage.setItem("bannerCount", count);
-      loadBanners();
-    };
-
-    // Load Banners
-    async function loadBanners() {
-      const list = document.getElementById("bannerList");
-      list.innerHTML = "";
-      const snapshot = await getDocs(bannerRef);
-      snapshot.forEach(docSnap => {
-        const b = docSnap.data();
-        const div = document.createElement("div");
-        div.className = "banner-item";
-        div.innerHTML = `
-          <img src="${b.image}" alt="banner" />
-          <button class="delete-btn" onclick="deleteBanner('${docSnap.id}')">Delete</button>
-        `;
-        list.appendChild(div);
-      });
+    if (snapshot.exists()) {
+      const data = snapshot.data(); // { email: "...", whatsapp: "..." }
+      document.getElementById("adminEmail").value = data.email || "";
+      document.getElementById("adminWhatsapp").value = data.whatsapp || "";
     }
-    window.deleteBanner = async (id) => {
-      await deleteDoc(doc(db, "banners", id));
-      loadBanners();
-    };
-
-    loadBanners();
+  }
 
     // Save Notification Settings
     document.getElementById("notificationForm").onsubmit = async (e) => {
